force-app/main/default/objects/Order/fields/Bulletin_de_salaire__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_de_salaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulletin de salaire</label>
    <type>Checkbox</type>
</CustomField>