force-app/main/default/objects/Order/fields/CNI__c.field-meta.xml
<CustomField>
    <fullName>CNI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CNI</label>
    <type>Checkbox</type>
</CustomField>