force-app/main/default/objects/Order/fields/Justif_dom__c.field-meta.xml
<CustomField>
    <fullName>Justif_dom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Justif dom</label>
    <type>Checkbox</type>
</CustomField>