force-app/main/default/objects/Order/fields/Mandat_de_delegation__c.field-meta.xml
<CustomField>
    <fullName>Mandat_de_delegation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandat de délégation</label>
    <type>Checkbox</type>
</CustomField>