force-app/main/default/objects/Order/fields/Moyen_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Moyen_de_paiement__c</fullName>
    <label>Moyen de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comptant</fullName>
            </value>
            <value>
                <fullName>Dossier de Financement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>