force-app/main/default/objects/Order/fields/Photo_du_site__c.field-meta.xml
<CustomField>
    <fullName>Photo_du_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo du site</label>
    <type>Checkbox</type>
</CustomField>