force-app/main/default/objects/Order/fields/RIB__c.field-meta.xml
<CustomField>
    <fullName>RIB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RIB</label>
    <type>Checkbox</type>
</CustomField>