force-app/main/default/objects/Order/fields/Taxe_fonciere__c.field-meta.xml
<CustomField>
    <fullName>Taxe_fonciere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxe foncière</label>
    <type>Checkbox</type>
</CustomField>